app/less/archetype.less
/* TODO: clean this up */

.archetypeEditor {
    width: 98%;
    
    .open {
        position: relative;
    }
    
    .dropdown-menu {
        top: auto;
        > li > a {
            border-radius: 6px;
        }
    }

    .controls-no-label {
        padding: 10px;
    }

    a+ul.dropdown-menu {
        margin-left: 0;
    }

    .icon {
        color: #333;
    }
    
    fieldset {
        border: 1px solid #dddddd;
        padding: 0;
        margin-bottom: 5px;
        background-color: #f1f1f1;
        clear: both;
        display: inline-block;
        width: 100%;

        .archetypeProperty {
            clear: both;
            overflow: visible;
            margin-top: 3px;

            label {
                padding-left: 5px !important;

                span {
                    color: #343434;
                }
                &.dimmed span {
                    color: #d9d9d9;
                }

            }
        }

        .archetypeFieldsetLabel {
            position: relative;
            width: 100%;

            .label-sub {
                padding: 8px 0;
                display: inline-block;
                &.module-label {
                    width: 100%;
                }
            }

            .dropdown-menu {
                position: relative;
                padding: 0;
                border-radius: 0;
                box-shadow: none;
                margin-top: -10px;
            }

            span {
                font-weight: bold;

                &.menu-label { font-weight: normal; }
            }

            label:hover {
                cursor: default;
            }

            &.enableCollapsing:hover {
                cursor: pointer;

                label  {
                    span {
                        text-decoration: underline;
                    }
                    &:hover {
                        cursor: pointer;
                    }
                }
            }

            .caret {
                margin: 8px 1px 0 15px;

                &.caret-right {
                    border-bottom: 4px solid transparent;
                    border-top: 4px solid transparent;
                    border-left: 4px solid #000000;
                    content: "";
                    margin-top: 6px;
                }
            }

            label {
                margin-bottom: 0;
                margin-left: 5px;
                padding: 0;
                span {
                    display: inline-block;
                }
                &.dimmed {
                    color: #d9d9d9;
                }
            }

            .archetypeEditorControls {
                float: none;
                position: absolute;
                right: 15px;
                top: 0;
            }
        }

        .archetypePropertyError {
            margin-bottom: 5px;
            padding-top: 3px;
            padding-bottom: 3px;

            label {

                span {
                    color: #b94a48;
                    font-weight: bold;
                }
            }
        }

        .archetypeCollapser {
            clear: both;
            height: 100%;
            padding-top: 12px;
            background-color: #fff;
            border-top: 1px solid silver;
            border-radius: 0 0 0 5px;

            form {
                margin-left:20px;

                .control-label {
                    padding-top: 0 !important;
                }
            }

            .archetypeFieldsetHelpText {
                clear:both;
                margin-bottom: 3px;
                font-size: 12px;
            }
        }
    }

    .archetypeDeveloperModel
    {
        font-family: monospace;
        width: 98%;
        min-height: 100px;
        margin-bottom: 10px;
        border: 1px solid red;
    }

    .archetypeFieldsetError {
        border: 1px solid #b94a48;
    }

    .archetypeAddButton:hover {
        text-decoration: none;
        cursor: pointer;

        .archetypeAddButtonText {
            text-decoration: underline;
        }
    }

    .multiPropertyTextbox {
        margin-bottom: 3px;
    }

    ul {
        list-style: none;
        margin-left: 0;
    }

    .show-validation.ng-invalid .control-group.error .control-label {
        span {
            color: #343434;
        }
    }
}

.archetypeEditor, .archetypeConfig {
    .archetypeEditorControls {
        float: right;

        i {
            cursor: pointer;
            &.handle {
                cursor: move;
            }
            &.dimmed {
                color: #d9d9d9;
            }
        }
    }
}

.archetypeConfig {
    margin-bottom: 20px;

    ul {
        list-style: none;
    }

    li {
        background-color: #fff;
    }

    label {
        width: 120px;
    }

    .archetypeEditorControls {
        float: right;
    }

    .archetypeFieldsets {
        margin-left: 0;
    }

    .archetypeFieldsetWrapper {
        border: 1px solid #ccc;
        padding: 10px;
        margin-bottom: 10px;
    }

    .archetypeFieldsetTitle {
        cursor: pointer;
        overflow: hidden;
    }

    .archetypeFieldsetOption {
        margin-bottom: 15px;
        input[type=text]{
            max-width: 300px;
        }
    }

    .archetypeDeveloperModel {
        font-family: monospace;
        width: 88%;
        margin: 5px 10px 10px;
        height: 130px;
    }

    .archetypeOptions label{
        width: 400px;
    }

    .archetypePropertiesWrapper {
        border: 1px solid #ddd;
        padding: 8px;
        margin: -40px 10px 10px 140px;
        max-width: 475px;

        ul {
            padding: 0;
            margin: 0;
        }

        li {
            padding: 10px;
            margin-bottom: 10px;
            background-color: #eee;

            input[type=text] {
                max-width: 190px;
                width: auto;
            }

            select {
                max-width: 160px;
            }
        }

        li:last-child {
            margin-bottom: 0;
        }
    }

    .archetypeAdvancedOptions {
        margin-top: 15px;
        div {
            margin-bottom: 10px;
        }
        label {
            width: 400px;
        }
    }

    .archetypeMaxFieldsets{
        border: 1px solid #ddd;
        width: 40px;
        text-align: right;
    }

    .archetypePropertyTitle {
        cursor: pointer;
        overflow: hidden;
    }

    .archetypePropertyCollapser {
        margin-top: 10px;
        div {
            margin-bottom: 10px;
        }
    }

    .archetypeFieldsetCollapser {
        margin-top: 15px;
    }

    .fieldsetIcon {
        margin-right: 10px;
    }
}

.ui-sortable-placeholder {
    visibility: visible !important;
    background-color:   #d0e7f1 !important;
}

